--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
                                     Application web complète pour la gestion des stagiaires au sein d'une entreprise, incluant l'administration, le superviseur et le stagiaire.
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
-                                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
-                                        Voir le code
-                                    </a>
+                                    <span target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                        En cours de développement
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +133,7 @@
                                     Système de gestion des notes d'étudiants pour un établissement scolaire, facilitant l'entrée , la consultation des résultats et des notes .
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                    <a href="https://github.com/lelenta05/gestion-des-notes/tree/master" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
                                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
                                         Voir le code
                                     </a>
@@ -151,7 +150,24 @@
                                     Développement d'une API RESTful  avec Laravel, permettant CRUD d'un produit avec un système de recherche .
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                    <a href="https://github.com/lelenta05/api-rest/tree/master" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
+                                        Voir le code
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                          <div class="bg-white rounded-xl shadow-xl overflow-hidden transition duration-300 hover:shadow-2xl transform hover:-translate-y-2 animate-fade-in-up">
+                            <img src="/img/logo-laravel-icon.png" alt="Capture d'écran du projet Gestion des notes" class="mx-auto h-auto w-48 object-contain border-b border-gray-200">
+                            <div class="p-8">
+                                <h3 class="text-2xl font-semibold text-gray-900 mb-3">Site web- E-commerce Fusion</h3>
+                                <p class="text-blue-600 font-medium text-sm mb-4">Laravel, Blade, Bootstrap,Html,Css</p>
+                                <p class="text-gray-700 text-base mb-6 leading-relaxed">
+                                    C'est un site web e-commerce pour la vente de chaussure 
+                                </p>
+                                <div class="flex justify-between items-center space-x-4">
+                                    <a href="https://github.com/lelenta05/site-web-ecommerce/tree/master" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
                                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
                                         Voir le code
                                     </a>
@@ -168,10 +184,9 @@
                                     Conception et développement d'une application mobile bancaire.
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
-                                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
-                                        Voir le code
-                                    </a>
+                                    <span  target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                       Cadre academique 
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -185,10 +200,9 @@
                                     Projet d'intelligence artificielle utilisant Python pour la classification d'images d'animaux, démontrant des compétences en machine learning.
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
-                                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
-                                        Voir le code
-                                    </a>
+                                    <span  target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                       Cadre academique
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -197,12 +211,12 @@
                             <img src="/img/html-css-js.jpeg" alt="html-css-js" class="mx-auto h-auto w-48 object-contain border-b border-gray-200">
                             <div class="p-8">
                                 <h3 class="text-2xl font-semibold text-gray-900 mb-3">Sites e-commerce (divers)</h3>
-                                <p class="text-blue-600 font-medium text-sm mb-4">HTML, CSS, Laravel, JavaScript</p>
+                                <p class="text-blue-600 font-medium text-sm mb-4">HTML, CSS,JavaScript</p>
                                 <p class="text-gray-700 text-base mb-6 leading-relaxed">
-                                    Réalisation de plusieurs projets de sites e-commerce, couvrant la conception front-end et le développement back-end.
+                                    Réalisation de plusieurs projets de sites e-commerce .
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                    <a href="https://github.com/lelenta05/site-statique/tree/master" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
                                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
                                         Voir le code
                                     </a>
@@ -219,10 +233,9 @@
                                     Application mobile d'alerte d'urgence pour les victimes d'agressions, intégrant l'envoi de messages avec géolocalisation aux forces de l'ordre. Réalisé lors de mon stage chez Orange Mali.
                                 </p>
                                 <div class="flex justify-between items-center space-x-4">
-                                    <a href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
-                                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
-                                        Détails du Projet
-                                    </a>
+                                   <span href="#" target="_blank" class="text-blue-700 hover:underline font-semibold text-base flex items-center">
+                                       Développement dans le cadre d'un Stage 
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -241,7 +254,7 @@
                             <h3 class="text-2xl font-semibold text-blue-700 mb-5">Développement Web</h3>
                             <ul class="space-y-4 text-gray-700 text-lg">
                                 <li class="flex items-center"><span class="text-green-500 mr-3">&#10003;</span> Création d'Applications Web ,Site Web & Sites Vitrines</li>
-                                <li class="flex items-center"><span class="text-green-500 mr-3">&#10003;</span> HTML, CSS</li>
+                                <li class="flex items-center"><span class="text-green-500 mr-3">&#10003;</span> HTML & CSS</li>
                                 <li class="flex items-center"><span class="text-green-500 mr-3">&#10003;</span> JavaScript</li>
                                 <li class="flex items-center"><span class="text-green-500 mr-3">&#10003;</span> PHP (Laravel)</li>
                                 <li class="flex items-center"><span class="text-green-500 mr-3">&#10003;</span> Tailwind CSS, Bootstrap</li>
@@ -352,11 +365,11 @@
             <div class="container mx-auto px-4">
                 <p class="text-lg">&copy; 2025 Cheick Sidy Mohamed Lelenta. Tous droits réservés.</p>
                 <div class="flex justify-center space-x-6 mt-6">
-                    <a href="https://www.linkedin.com/in/cheick-sidy-mohamed-lelenta-773a64257/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-blue-400 transition-colors duration-300">
+                    <a href="https://ma.indeed.com/" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-blue-400 transition-colors duration-300">
                         <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                         <span class="sr-only">LinkedIn</span>
                     </a>
-                    <a href="https://github.com/Cheick-sidy" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-purple-400 transition-colors duration-300">
+                    <a href="https://github.com/lelenta05" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-purple-400 transition-colors duration-300">
                         <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.83 9.504.47.087.68-.217.68-.483 0-.232-.008-.857-.012-1.674-2.775.605-3.36-1.34-3.36-1.34-.454-1.156-1.11-1.46-1.11-1.46-.908-.62.069-.608.069-.608 1.004.07 1.532 1.03 1.532 1.03.89 1.529 2.34 1.087 2.91.829.091-.643.352-1.085.645-1.334-2.22-.253-4.555-1.113-4.555-4.93 0-1.09.39-1.98.998-2.67-.1-.253-.43-1.26.09-2.64 0 0 .81-.26 2.64 1.02.77-.215 1.58-.323 2.4-.326 0 0 .82.11 1.6.326 1.83-1.28 2.64-1.02 2.64-1.02.52 1.38.19 2.387.09 2.64.61.69.998 1.58.998 2.67 0 3.827-2.338 4.673-4.562 4.92.358.308.678.917.678 1.855 0 1.336-.012 2.417-.012 2.747 0 .267.21.57.685.478C21.137 20.18 24 16.425 24 12.017 24 6.484 19.522 2 14 2H12z"/></svg>
                         <span class="sr-only">GitHub</span>
                     </a>
